# logaroo

./: .coverage  README.md  pyproject.toml
src/logaroo/: __init__.py  exceptions.py  level.py  logger.py  message.py
tests/: test.json  test_logger.py  test_message.py
