[project]
name = "logaroo"
version = "0.1.0"
description = "Yet another logging package"
authors = [
    {name = "John Dru",email = "john@muopia.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "packaging (>=25.0,<26.0)",
]
license = "MIT"
repository = "https://github.com/drummondj/logaroo"
documentation = "https://github.com/drummondj/logaroo/blob/main/README.md"

[tool.poetry]
packages = [{include = "logaroo", from = "src"}]


[tool.poetry.group.dev.dependencies]
coverage = "^7.8.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
